# Techathon

./: README.md
backend_layer_a/: README.md  check_models.py  client_demo.py  pyproject.toml  requirements.txt
backend_layer_a/data/: ideal_match_rfp.json  partial_match_rfp.json  pricing_db.json  product_repo.json
backend_layer_a/output_examples/: ideal_match_output.json  partial_match_output.json
backend_layer_a/src/: graph.py  main.py  state.py
backend_layer_a/src/agents/: main_agent.py  pricing.py  sales.py  technical.py
backend_layer_a/src/data_layer/: json_impl.py  protocols.py
backend_layer_a/src/tools/: fetch.py  ingest.py  pricing.py  product.py
backend_layer_a/src/utils/: logger.py  spec_matcher.py
rfp-navigator-main/: index.html  tailwind.config.ts
rfp-navigator-main/src/: App.css  App.tsx  index.css
rfp-navigator-main/src/components/landing/: AgentTimeline.tsx  HeroSection.tsx
rfp-navigator-main/src/components/layout/: Header.tsx
rfp-navigator-main/src/components/pipeline/: AgentStepper.tsx  EventLog.tsx
rfp-navigator-main/src/components/pipeline/outputs/: MainAgentOutput.tsx  (+3 more)
rfp-navigator-main/src/components/response/: FinalResponseCard.tsx
rfp-navigator-main/src/components/rfp/: RFPCard.tsx
rfp-navigator-main/src/components/ui/: badge.tsx  button.tsx  card.tsx
rfp-navigator-main/src/data/: mockData.ts
rfp-navigator-main/src/hooks/: usePipeline.ts
rfp-navigator-main/src/lib/: api.ts
rfp-navigator-main/src/pages/: FinalResponse.tsx  Index.tsx  PipelineExecution.tsx  RFPDetection.tsx
rfp-navigator-main/src/types/: rfp.ts
