[project]
name = "backend-layer-a"
version = "0.1.0"
description = "RFP Automation Example Backend"
authors = [{name = "Antigravity", email = "antigravity@gemini.com"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain",
    "pydantic",
    "python-multipart"
]
requires-python = ">=3.9"
